--- a/sounds/manifest.json
+++ b/sounds/manifest.json
@@ -1,4 +1,20 @@
 [
   "click.mp3",
-  "a.mp3"
+  "a.mp3",
+  "message notification sound.mp3",
+  "notification sound 1.mp3",
+  "notification sound 2.mp3",
+  "notification sound 3.mp3",
+  "notification sound 4.mp3",
+  "notification sound 5.mp3",
+  "notification sound 6.mp3",
+  "notification sound 7.mp3",
+  "notification sound 8.mp3",
+  "notification sound 9.mp3",
+  "notification sound 10.mp3",
+  "notification sound 11.mp3",
+  "notification sound 12.mp3",
+  "notification tone.mp3",
+  "stylish notification sound.mp3",
+  "unique notification tone.mp3"
 ]
